--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "devDependencies": {
     "apexcharts": "^2.2.4",
     "rollup": "^0.62.0",
-    "rollup-plugin-commonjs": "^9.1.3"
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.4.0"
   },
   "scripts": {
     "build": "rollup -c ./rollup.config.js"
